--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -592,12 +592,29 @@ p.scalable {
 .code-block {
   font-style: italic;
   margin: 10px 0 40px;
-  font-size: .93rem;
+  font-size: 0.93rem;
   border-radius: 9px;
 }
 
 .code-block pre {
   background-color: transparent;
+  padding: 1em;
+  margin: 0.5em 0;
+  overflow: auto;
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  font-size: 1em;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+  -moz-tab-size: 4;
+    -o-tab-size: 4;
+       tab-size: 4;
+  -webkit-hyphens: none;
+      -ms-hyphens: none;
+          hyphens: none;
 }
 
 .code-block pre code {
