--- a/scss/base/_container.scss
+++ b/scss/base/_container.scss
@@ -1,3 +1,77 @@
+html {
+        font-family: sans-serif;
+        line-height: 1.15;
+        -webkit-text-size-adjust: 100%;
+}
+
+body {
+        margin: 0;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        text-align: left;
+        height: 100vh;
+        // transition: 1s background ease;
+        background-color: $schemeColor;
+}
+
+.display-table {
+        width: 100%;
+        height: 100%;
+        display: table;
+}
+
+.display-content {
+        vertical-align: middle;
+        display: table-cell;
+        padding: 3.5rem 0;
+}
+
 .display-content > .container {
         background-color: $schemeColor;
+        position: relative;
+}
+
+.container {
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+}
+
+.display-content > .container::before,
+body::before {
+        // set background (regardless of its background-color)opacity without affect child elements
+        // (require parent with position: relative)
+        content: "";
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        z-index: -1;
+}
+
+body::before {
+        opacity: 1;
+        // set background coverring whole page
+        position: fixed;
+        height: 100%;
+        z-index: -2;
+}
+
+// PROJECT-SPECIFIC
+.display-content:not(.injected-section .display-content) {
+        background-color: transparent;
+}
+
+.full-screen {
+        height: 100vh;
+}
+
+// Code Block
+code {
+        font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+                "Courier New", monospace;
 }
