--- a/scss/base/_general.scss
+++ b/scss/base/_general.scss
@@ -1,358 +1,121 @@
-/*-------------------------
-         GENERAL
--------------------------*/
-// FORM COMPONENTS
+// TODO: Separate rules into each component
 
+// FORM COMPONENTS
 .form-group,
 .form-control,
 .form-control:focus,
 .form-control:hover {
-  background-color: transparent;
+        background-color: transparent;
 }
 
 label.form-control {
-  background: none;
-  border: none;
+        background: none;
+        border: none;
 }
-
-// CONTAINER COMPONENTS
-.display-content > .container {
-  position: relative;
-}
-
-.display-content > .container::before,
-body::before {
-  // set background (regardless of its background-color)opacity without affect child elements (require parent with position: relative)
-  content: "";
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  z-index: -1;
-}
-
-body::before {
-  opacity: 1;
-  // set background coverring whole page
-  position: fixed;
-  height: 100%;
-  z-index: -2;
-}
-
-$agencyFbRegular: "/assets/fonts/agency-fb-regular/AgencyFB-Reg";
-$agencyFbBold: "/assets/fonts/agency-fb-bold/AgencyFB-Bold";
-
-@font-face {
-  font-family: "Agency FB";
-  src: url("#{$agencyFbRegular}.ttf");
-  src: url("#{$agencyFbRegular}.eot") format("embedded-opentype"),
-    url("#{$agencyFbRegular}.woff2") format("woff2"),
-    url("#{$agencyFbRegular}.woff") format("woff"),
-    url("#{$agencyFbRegular}.ttf") format("truetype"),
-    url("#{$agencyFbRegular}.svg") format("svg");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Agency FB Bold";
-  src: url("#{$agencyFbBold}.ttf");
-  src: url("#{$agencyFbBold}.eot") format("embedded-opentype"),
-    url("#{$agencyFbBold}.woff2") format("woff2"),
-    url("#{$agencyFbBold}.woff") format("woff"),
-    url("#{$agencyFbBold}.ttf") format("truetype"),
-    url("#{$agencyFbBold}.svg") format("svg");
-  font-display: swap;
-}
-
-body {
-  height: 100vh;
-  transition: 1s background ease;
-}
-
-.display-content:not(.injected-section .display-content) {
-  background-color: transparent;
-}
-
-.full-screen {
-  height: 100vh;
-}
-
-// TRANSITION
-$transition_duration: 0.8s;
-
-.image-border,
-.box-border,
-.form-group,
-.blog-intro,
-.blog-image,
-.checkbox label,
-.segmented-control,
-.badge-border {
-  transition: $transition_duration all ease !important;
-  -webkit-transition: $transition_duration all ease !important;
-}
-
-.radio-selection {
-  transition: 0.4s all ease !important;
-  -webkit-transition: 0.4s all ease !important;
+// placeholder text
+.form-control::placeholder {
+        opacity: 1;
 }
 
 /* CONTAINER COMPONENTS */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-  font-family: $fontBold;
-  //   font-family: "Press Start 2P", cursive;
-  line-height: 1.618;
-  margin-bottom: 0.5rem;
-  font-weight: 600;
-  line-height: 1.2;
-}
-
-body {
-  font-family: $fontRegular;
-  //   font-family: "Press Start 2P", cursive;
-  font-size: 1.35rem * $fontScale;
-  font-weight: 400;
-}
-
-p {
-  font-size: 1.35rem * $fontScale;
-}
-
-h1,
-.h1 {
-  margin-top: 0;
-  font-size: 4rem * $fontScale;
-}
-
-h2,
-.h2 {
-  font-size: 3rem * $fontScale;
-}
-
-h3,
-.h3 {
-  font-size: 2.5rem * $fontScale;
-}
-
-h4,
-.h4 {
-  font-size: 2rem * $fontScale;
-}
-
-h5,
-.h5 {
-  font-size: 1.75rem * $fontScale;
-}
-
-h6,
-.h6 {
-  font-size: 1.5rem * $fontScale;
-}
-
-.z-index {
-  z-index: 2;
-}
-
-h2,
-h2 span {
-  font-weight: 700;
-}
-
-p {
-  -ms-word-break: break-all;
-  word-break: break-all;
-  /* Non standard for WebKit */
-  word-break: break-word;
-
-  // insert a hypen before each break
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  hyphens: auto;
-}
-
-.paragraph-title {
-  font-family: $fontBold;
-  font-size: 1.6rem * $fontScale;
-  font-weight: 600;
-  margin-bottom: 0.2rem / $fontScale;
-}
-
-.max-width-450 {
-  max-width: 450px;
-  margin: 0 auto;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-a,
-button {
-  outline: none !important;
-  text-decoration: none;
-}
-
 .box-border {
-  background-color: #f1f3f6;
-  padding: 15px 20px 7px;
-}
-
-// IMAGE
-.image-caption {
-  font-size: 1.15rem * $fontScale;
-  font-style: italic;
-  text-align: center;
-  margin-top: 6px;
-}
-
-.image-border {
-  background-color: #f1f3f6;
-  padding: 5px;
-}
-
-.image-border img {
-  width: 100%;
-}
-
-.display-table {
-  width: 100%;
-  height: 100%;
-  display: table;
-}
-
-.display-content {
-  vertical-align: middle;
-  display: table-cell;
-  padding: 3.5rem 0;
-}
-
-.center-item {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
-.text-dark {
-  color: #5f5f5f;
-}
-
-.dark-bg {
-  background-color: #2c2d30;
-}
-
-.title-wrapper {
-  text-align: center;
-  font-size: 3.5rem * $fontTitleScale;
-  font-weight: 900;
-  opacity: 0.12;
-  font-family: $fontTitle;
-  margin-top: -18px;
-}
-
-.title-content {
-  text-align: center;
-  position: relative;
-  top: -48px;
-}
-
-.title-content h2 {
-  font-size: 32px * $fontTitleScale;
-  font-weight: 900;
-  font-family: $fontTitle;
-  margin-bottom: 0;
+        background-color: #f1f3f6;
+        padding: 15px 20px 7px;
 }
 
 .border-style {
-  height: 2px;
-  width: 65px;
-  margin: 16px auto;
-  transition: all 0.5s;
+        height: 2px;
+        width: 65px;
+        margin: 16px auto;
+        transition: all 0.5s;
 }
 
 .resume-title:hover .border-style {
-  width: 90px;
+        width: 90px;
 }
 
 .icon-image i {
-  font-size: 2.5rem;
+        font-size: 2.5rem;
 }
 
 .icon-image img {
-  width: 45px;
-  height: 45px;
+        width: 45px;
+        height: 45px;
 }
 
-// Placeholder text
-.form-control::placeholder {
-  opacity: 1;
-}
-
-// TABLE
+/*TABLE */
 table.neumorphic {
-  border-spacing: 0;
-  overflow: hidden;
-  text-align: center;
-  position: relative;
+        border-spacing: 0;
+        overflow: hidden;
+        text-align: center;
+        position: relative;
 }
 
 table.neumorphic th {
-  font-size: 1.35rem * $fontScale;
-  padding: 7px;
-  white-space: pre;
+        font-size: 1.35rem * $fontScale;
+        padding: 7px;
+        white-space: pre;
 }
 
 table.neumorphic tbody {
-  font-size: 1.2rem * $fontScale;
+        font-size: 1.2rem * $fontScale;
 }
 
 table.neumorphic > tbody > tr > td {
-  padding: 10px;
-  position: relative;
+        padding: 10px;
+        position: relative;
 }
 
 table.neumorphic tr td:first-child::before {
-  content: "";
-  position: absolute;
-  padding: 7px;
-  top: 0;
-  left: -5000px;
-  width: 10000px;
-  height: 100%;
-  z-index: -10;
+        content: "";
+        position: absolute;
+        padding: 7px;
+        top: 0;
+        left: -5000px;
+        width: 10000px;
+        height: 100%;
+        z-index: -10;
 }
 
 table.neumorphic td:hover::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: -5000px;
-  height: 10000px;
-  width: 100%;
-  z-index: -1;
+        content: "";
+        position: absolute;
+        left: 0;
+        top: -5000px;
+        height: 10000px;
+        width: 100%;
+        z-index: -1;
 }
 
 /* IMAGE */
 img.lazy,
 video.lazy {
-  opacity: 0;
-  transition: opacity 0.8s ease;
+        opacity: 0;
+        transition: opacity 0.8s ease;
 }
 
 img.lazy.loaded,
 video.lazy.loaded {
-  opacity: 1;
+        opacity: 1;
+}
+
+.image-border {
+        background-color: #f1f3f6;
+        padding: 5px;
+}
+
+.image-border img {
+        width: 100%;
+}
+
+// DIVIDER
+hr {
+        box-sizing: content-box;
+        height: 0;
+        overflow: visible;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        border: 0;
+        border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
