--- a/scss/base/_media.scss
+++ b/scss/base/_media.scss
@@ -1,9 +1,30 @@
+@media (min-width: 576px) {
+        .container {
+                max-width: 540px;
+        }
+}
+@media (min-width: 768px) {
+        .container {
+                max-width: 720px;
+        }
+}
+@media (min-width: 992px) {
+        .container {
+                max-width: 960px;
+        }
+}
 @media (min-width: 1200px) {
-        .display-content>.container {
+        .container {
+                max-width: 1140px;
+        }
+}
+
+@media (min-width: 1200px) {
+        .display-content > .container {
                 max-width: 1100px;
         }
 
-        .display-content>.container {
+        .display-content > .container {
                 padding: 40px;
         }
 }
