--- a/scss/styles/_nes.scss
+++ b/scss/styles/_nes.scss
@@ -84,6 +84,8 @@ $whiteButtonBorderImg: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding
         }
 
         .button {
+                background-color: $highlightColor;
+                color: $contrastHighlightColor;
                 //     border-image-repeat: space;
                 border-image-repeat: stretch;
         }
