--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -1,7 +1,9 @@
 :root {
-  --scheme-color: #da1313;
+  --scheme-color: #d4d4d4;
   --highlight-color: #004b97;
-  --highlight-color-invert: #d4d4d4;
+  --highlight-color-inverted: #d4d4d4;
+  --base-color: black;
+  --base-color-muted: #4d4d4d;
 }
 
 /* FONT */
@@ -108,19 +110,19 @@
 }
 
 .setting-section .setting-panel .radio-group-wrapper #solid-border ~ label .text {
-  border: 4px solid #4d4d4d;
+  border: 4px solid var(--base-color-muted);
 }
 
 .setting-section .setting-panel .radio-group-wrapper #double-border ~ label .text {
-  border: 4px double #4d4d4d;
+  border: 4px double var(--base-color-muted);
 }
 
 .setting-section .setting-panel .radio-group-wrapper #dotted-border ~ label .text {
-  border: 4px dotted #4d4d4d;
+  border: 4px dotted var(--base-color-muted);
 }
 
 .setting-section .setting-panel .radio-group-wrapper #dashed-border ~ label .text {
-  border: 4px dashed #4d4d4d;
+  border: 4px dashed var(--base-color-muted);
 }
 
 .setting-section .setting-panel .range-slider__range {
@@ -748,9 +750,9 @@ code {
 }
 
 .code-block pre code {
-  text-shadow: 0 0.5px black;
+  text-shadow: 0 0.5px var(--base-color);
   display: block;
-  color: #4d4d4d;
+  color: var(--base-color-muted);
   white-space: pre-wrap;
   white-space: -moz-pre-wrap;
   white-space: -o-pre-wrap;
@@ -786,7 +788,7 @@ code {
 .code-block .token.comment,
 .code-block .token.doctype,
 .code-block .token.prolog {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .title-bar-text-wrapper {
@@ -796,7 +798,7 @@ code {
   opacity: 0.12;
   font-family: "Poppins", sans-serif;
   margin-top: -18px;
-  color: black;
+  color: var(--base-color);
 }
 
 .title-bar-text {
@@ -838,7 +840,7 @@ code {
       -ms-flex-align: center;
           align-items: center;
   cursor: pointer;
-  color: black;
+  color: var(--base-color);
   font-size: 1.1rem;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -912,7 +914,7 @@ code {
 
 .range-slider label {
   border-radius: 9px;
-  color: black;
+  color: var(--base-color);
   font-size: 1.1rem !important;
   display: block;
   margin: 0px 0 0px;
@@ -966,7 +968,7 @@ code {
   font-style: italic;
   font-size: 1rem !important;
   border-radius: 9px;
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .range-slider__value .after {
@@ -1116,13 +1118,13 @@ input::-moz-focus-outer {
   font-size: 1.1rem;
   border-width: 0;
   border-radius: 9px;
-  color: black;
+  color: var(--base-color);
   padding: 0.375rem 0.75rem;
 }
 
 .dropdown button p {
   font-size: 1.1rem;
-  color: black;
+  color: var(--base-color);
 }
 
 .dropdown-label {
@@ -1175,7 +1177,7 @@ input::-moz-focus-outer {
   display: none;
   padding: 0;
   margin: 10px 0 0;
-  color: #4d4d4d;
+  color: var(--base-color-muted);
   text-align: left;
   list-style: none;
   background-clip: padding-box;
@@ -1184,7 +1186,7 @@ input::-moz-focus-outer {
 }
 
 .dropdown-item {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
   border-radius: 9px;
@@ -1276,7 +1278,7 @@ input::-moz-focus-outer {
 }
 
 .nes-style .cp-toggle i {
-  color: var(--highlight-color-invert) !important;
+  color: var(--highlight-color-inverted) !important;
   position: relative;
   top: -5px;
   left: -0.5px;
@@ -1308,7 +1310,7 @@ input::-moz-focus-outer {
 
 .nes-style .button {
   background-color: var(--highlight-color);
-  color: var(--highlight-color-invert);
+  color: var(--highlight-color-inverted);
   border-image-repeat: stretch;
 }
 
@@ -1407,7 +1409,7 @@ input::-moz-focus-outer {
 .nes-style .checkbox label::before {
   width: 2px;
   height: 2px;
-  color: black;
+  color: var(--base-color);
   position: absolute;
   top: 3px;
   left: -1px;
@@ -1465,7 +1467,7 @@ input::-moz-focus-outer {
 .nes-style .dropdown .dropdown-arrow::after {
   width: 3px;
   height: 3px;
-  color: black;
+  color: var(--base-color);
   -webkit-box-shadow: 3px 3px, 6px 3px, 9px 3px, 12px 3px, 15px 3px, 18px 3px, 21px 3px, 3px 6px, 6px 6px, 9px 6px, 12px 6px, 15px 6px, 18px 6px, 21px 6px, 6px 9px, 9px 9px, 12px 9px, 15px 9px, 18px 9px, 6px 12px, 9px 12px, 12px 12px, 15px 12px, 18px 12px, 9px 15px, 12px 15px, 15px 15px, 12px 18px;
           box-shadow: 3px 3px, 6px 3px, 9px 3px, 12px 3px, 15px 3px, 18px 3px, 21px 3px, 3px 6px, 6px 6px, 9px 6px, 12px 6px, 15px 6px, 18px 6px, 21px 6px, 6px 9px, 9px 9px, 12px 9px, 15px 9px, 18px 9px, 6px 12px, 9px 12px, 12px 12px, 15px 12px, 18px 12px, 9px 15px, 12px 15px, 15px 15px, 12px 18px;
   position: absolute;
@@ -1506,7 +1508,7 @@ input::-moz-focus-outer {
 }
 
 .nes-style .segmented-control input:checked + label {
-  color: var(--highlight-color-invert);
+  color: var(--highlight-color-inverted);
 }
 
 .nes-style .image-border {
@@ -1551,7 +1553,7 @@ input::-moz-focus-outer {
 }
 
 .nes-style .personal-image img {
-  border: black 4px solid;
+  border: var(--base-color) 4px solid;
   opacity: 1;
 }
 
@@ -2197,7 +2199,7 @@ body,
 }
 
 #pp-nav li :not(.active) span {
-  background-color: black;
+  background-color: var(--base-color);
 }
 
 #pp-nav li .active span {
@@ -2227,7 +2229,7 @@ body,
 .portfolio-single .close,
 .pp-tooltip,
 .blog-label a {
-  color: black;
+  color: var(--base-color);
 }
 
 .blog-content .list-inline-item span,
@@ -2238,7 +2240,7 @@ body,
 .form-control:-ms-input-placeholder,
 .form-control::-ms-input-placeholder,
 .contact-info-text small {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .blog-content .list-inline-item span,
@@ -2249,7 +2251,7 @@ body,
 .form-control:-ms-input-placeholder,
 .form-control::-ms-input-placeholder,
 .contact-info-text small {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .blog-content .list-inline-item span,
@@ -2260,7 +2262,7 @@ body,
 .form-control:-ms-input-placeholder,
 .form-control::-ms-input-placeholder,
 .contact-info-text small {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .colorfull1,
@@ -2379,7 +2381,7 @@ table,
 }
 
 .checkbox i {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .flat-style .dui-radio .label,
@@ -2559,7 +2561,7 @@ table,
 }
 
 .neu-style .segmented-control > input:not(:checked):not(:hover) + label {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .neu-style .button,
@@ -2583,7 +2585,7 @@ table,
 
 .neu-style .checkbox input:not(:checked):not(:hover) ~ label i,
 .neu-style .checkbox input:not(:checked) ~ label + .name {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .neu-style .checkbox input:checked ~ label + .name,
@@ -2619,7 +2621,7 @@ table,
 
 .flat-style .button {
   background-color: var(--highlight-color);
-  color: var(--highlight-color-invert);
+  color: var(--highlight-color-inverted);
 }
 
 .flat-style .button:hover {
@@ -2629,7 +2631,7 @@ table,
 .flat-style .radio-button-group .button.active,
 .flat-style .radio-button-group .button:not(.active):hover {
   background-color: var(--highlight-color);
-  color: var(--highlight-color-invert);
+  color: var(--highlight-color-inverted);
 }
 
 .flat-style .radio-button-group .button:not(.active) {
@@ -2639,7 +2641,7 @@ table,
 .flat-style .radio-selection,
 .flat-style table > tbody > tr:hover {
   background-color: var(--highlight-color);
-  color: var(--highlight-color-invert);
+  color: var(--highlight-color-inverted);
 }
 
 .flat-style .box-border,
@@ -2651,7 +2653,7 @@ table,
 .flat-style .setting-panel,
 .flat-style .setting-button {
   background-color: #e1e1e1;
-  color: black;
+  color: var(--base-color);
 }
 
 .flat-style .display-content > .container.none-bg,
@@ -2659,11 +2661,11 @@ table,
 .flat-style .range-slider__value,
 .flat-style .modal-content {
   background-color: var(--scheme-color);
-  color: black;
+  color: var(--base-color);
 }
 
 .flat-style .segmented-control > input:not(:checked):not(:hover) + label {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .flat-style .segmented-control > input:hover + label {
@@ -2671,12 +2673,12 @@ table,
 }
 
 .flat-style .segmented-control > input:checked + label {
-  color: var(--highlight-color-invert);
+  color: var(--highlight-color-inverted);
 }
 
 .flat-style .checkbox input:not(:checked):not(:hover) ~ label i,
 .flat-style .checkbox input:not(:checked) ~ label + .name {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .flat-style .checkbox input:checked ~ label + .name,
@@ -2729,7 +2731,7 @@ table,
 .glass-style .radio-selection,
 .glass-style table > tbody > tr:hover {
   background-color: var(--highlight-color);
-  color: var(--highlight-color-invert);
+  color: var(--highlight-color-inverted);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(209, 213, 219, 0.6);
@@ -2744,7 +2746,7 @@ table,
 .glass-style .setting-panel,
 .glass-style .setting-button {
   background-color: rgba(250, 250, 250, 0.6);
-  color: black;
+  color: var(--base-color);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(209, 213, 219, 0.6);
@@ -2755,7 +2757,7 @@ table,
 .glass-style .range-slider__value,
 .glass-style .modal-content {
   background-color: rgba(212, 212, 212, 0.6);
-  color: black;
+  color: var(--base-color);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(209, 213, 219, 0.6);
@@ -2779,14 +2781,14 @@ table,
 
 .glass-style .button:hover {
   background-color: rgba(3, 54, 105, 0.6);
-  color: var(--highlight-color-invert);
+  color: var(--highlight-color-inverted);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(209, 213, 219, 0.6);
 }
 
 .glass-style .segmented-control > input:not(:checked):not(:hover) + label {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .glass-style .segmented-control > input:hover + label {
@@ -2794,12 +2796,12 @@ table,
 }
 
 .glass-style .segmented-control > input:checked + label {
-  color: var(--highlight-color-invert);
+  color: var(--highlight-color-inverted);
 }
 
 .glass-style .checkbox input:not(:checked):not(:hover) ~ label i,
 .glass-style .checkbox input:not(:checked) ~ label + .name {
-  color: #4d4d4d;
+  color: var(--base-color-muted);
 }
 
 .glass-style .checkbox input:checked ~ label + .name,
