--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -1,15 +1,19 @@
 :root {
+  /* Basic colors */
   --scheme-color: #d4d4d4;
   --highlight-color: #004b97;
   --highlight-color-inverted: #d4d4d4;
   --base-color: black;
   --base-color-muted: #4d4d4d;
+  /* Classification colors */
   --group-1-color: #01724b;
   --group-2-color: #bc5b00;
   --group-3-color: #c40639;
   --group-1-color-inverted: white;
   --group-2-color-inverted: white;
   --group-3-color-inverted: white;
+  /* Others */
+  --border-radius: 9px;
 }
 
 /* FONT */
@@ -695,14 +699,14 @@ code {
 .button-border {
   display: inline-block;
   padding: 1px;
-  border-radius: 9px;
+  border-radius: var(--border-radius);
   transition: 0.8s all ease !important;
   -webkit-transition: 0.8s all ease !important;
 }
 
 .button-border .button {
   color: var(--highlight-color);
-  border-radius: 9px;
+  border-radius: var(--border-radius);
   padding: 10px 30px;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
@@ -731,7 +735,7 @@ code {
   font-style: italic;
   margin: 10px 0 40px;
   font-size: 0.93rem;
-  border-radius: 9px;
+  border-radius: var(--border-radius);
 }
 
 .code-block pre {
@@ -858,7 +862,7 @@ code {
   transition: -webkit-transform .2s ease-out;
   transition: transform .2s ease-out;
   transition: transform .2s ease-out, -webkit-transform .2s ease-out;
-  border-radius: 9px;
+  border-radius: var(--border-radius);
   padding: 5px 15px;
 }
 
@@ -919,7 +923,7 @@ code {
 }
 
 .range-slider label {
-  border-radius: 9px;
+  border-radius: var(--border-radius);
   color: var(--base-color);
   font-size: 1.1rem !important;
   display: block;
@@ -927,7 +931,7 @@ code {
 }
 
 .range-slider__range {
-  border-radius: 9px;
+  border-radius: var(--border-radius);
   -webkit-appearance: none;
   width: calc(100% - (2.8rem));
   height: 10px;
@@ -973,7 +977,7 @@ code {
   transition: all 0.3s ease;
   font-style: italic;
   font-size: 1rem !important;
-  border-radius: 9px;
+  border-radius: var(--border-radius);
   color: var(--base-color-muted);
 }
 
@@ -1020,7 +1024,7 @@ input::-moz-focus-outer {
   position: relative;
   height: 25px;
   width: 60px;
-  border-radius: 9px;
+  border-radius: var(--border-radius);
   overflow: hidden;
 }
 
@@ -1031,7 +1035,7 @@ input::-moz-focus-outer {
 .toggle .indicator {
   height: 100%;
   width: 200%;
-  border-radius: 9px;
+  border-radius: var(--border-radius);
   -webkit-transform: translate3d(-75%, 0, 0);
           transform: translate3d(-75%, 0, 0);
   -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
@@ -1123,7 +1127,7 @@ input::-moz-focus-outer {
   letter-spacing: 0.025em;
   font-size: 1.1rem;
   border-width: 0;
-  border-radius: 9px;
+  border-radius: var(--border-radius);
   color: var(--base-color);
   padding: 0.375rem 0.75rem;
 }
@@ -1188,14 +1192,14 @@ input::-moz-focus-outer {
   list-style: none;
   background-clip: padding-box;
   border-width: 0;
-  border-radius: 9px;
+  border-radius: var(--border-radius);
 }
 
 .dropdown-item {
   color: var(--base-color-muted);
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
-  border-radius: 9px;
+  border-radius: var(--border-radius);
   padding: 0.5rem 1rem;
 }
 
@@ -2383,7 +2387,7 @@ table,
 .form-group textarea,
 .video-container,
 .alert {
-  border-radius: 9px;
+  border-radius: var(--border-radius);
 }
 
 .checkbox i {
