--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -1203,9 +1203,6 @@ input::-moz-focus-outer {
   padding: 0.5rem 1rem;
 }
 
-/*-------------------------
-      FLAT STYLE LIGHT
--------------------------*/
 .flat-style #flat-customizer {
   display: block !important;
 }
@@ -2617,6 +2614,8 @@ table,
 }
 
 .flat-style {
+  --scheme-color-lighten: #e1e1e1;
+  --highlight-color-darken: #033669;
   /*-------------------------
       CONTAINER COMPONENTS
 -------------------------*/
@@ -2626,7 +2625,7 @@ table,
 }
 
 .flat-style .code-block {
-  background-color: #e1e1e1;
+  background-color: var(--scheme-color-lighten);
 }
 
 .flat-style .button {
@@ -2635,7 +2634,7 @@ table,
 }
 
 .flat-style .button:hover {
-  background-color: #033669;
+  background-color: var(--highlight-color-darken);
 }
 
 .flat-style .radio-button-group .button.active,
@@ -2662,7 +2661,7 @@ table,
 .flat-style .setting-button-border,
 .flat-style .setting-panel,
 .flat-style .setting-button {
-  background-color: #e1e1e1;
+  background-color: var(--scheme-color-lighten);
   color: var(--base-color);
 }
 
@@ -2698,7 +2697,7 @@ table,
 }
 
 .flat-style ::-webkit-scrollbar-track {
-  background-color: #e1e1e1;
+  background-color: var(--scheme-color-lighten);
 }
 
 .flat-style ::-webkit-scrollbar-thumb {
@@ -2706,7 +2705,7 @@ table,
 }
 
 .flat-style ::-webkit-scrollbar-thumb:hover {
-  background: #033669;
+  background: var(--highlight-color-darken);
 }
 
 .flat-style ::-webkit-slider-thumb {
@@ -2714,7 +2713,7 @@ table,
 }
 
 .flat-style ::-webkit-slider-thumb:hover {
-  background-color: #033669;
+  background-color: var(--highlight-color-darken);
 }
 
 .pixelart-to-css {
