--- a/scss/base/_text.scss
+++ b/scss/base/_text.scss
@@ -1,5 +1,5 @@
-$agencyFbRegular: "/assets/fonts/agency-fb-regular/AgencyFB-Reg";
-$agencyFbBold: "/assets/fonts/agency-fb-bold/AgencyFB-Bold";
+$agencyFbRegular: "../fonts/agency-fb-regular/AgencyFB-Reg";
+$agencyFbBold: "../fonts/agency-fb-bold/AgencyFB-Bold";
 
 @font-face {
         font-family: "Agency FB";
