--- a/scss/init/_flat.scss
+++ b/scss/init/_flat.scss
@@ -13,6 +13,13 @@
         }
 
         /*-------------------------
+      FORM COMPONENTS
+-------------------------*/
+        // INPUT
+        .form-control {
+                background-color: $schemeColorLighten;
+        }
+        /*-------------------------
       ELEMENTS
 -------------------------*/
         //BUTTON
